--- a/package.json
+++ b/package.json
@@ -8,13 +8,24 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "keywords": [
+    "primereact",
+    "react",
+    "starter"
+  ],
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@nextui-org/react": "1.0.0-beta.13",
+    "@tanstack/react-table": "8.9.3",
+    "@types/lodash.times": "^4.3.7",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "lodash": "^4.17.21",
+    "lodash.times": "^4.3.2",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
