--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "eslint-config-next": "13.4.9",
     "lodash": "^4.17.21",
     "lodash.times": "^4.3.2",
+    "multer": "1.4.5-lts.1",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6",
-    "react-icons": "^4.7.1"
+    "typescript": "5.1.6"
   }
 }
