--- a/package.json
+++ b/package.json
@@ -17,22 +17,33 @@
     "@faker-js/faker": "^7.6.0",
     "@nextui-org/react": "1.0.0-beta.13",
     "@tanstack/react-table": "8.9.3",
+    "@types/formidable": "^3.4.0",
     "@types/lodash.times": "^4.3.7",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@uploadthing/react": "^5.1.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "form-data": "^4.0.0",
+    "formidable": "v3",
     "lodash": "^4.17.21",
     "lodash.times": "^4.3.2",
     "multer": "1.4.5-lts.1",
     "next": "13.4.9",
+    "next-connect": "^1.0.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uploadthing": "^4.1.1"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.7"
   }
 }
