--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-icons": "^4.7.1",
     "tailwindcss": "3.3.2",
     "tw-elements": "1.0.0-beta2",
