--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "@nextui-org/react": "1.0.0-beta.13",
+    "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "8.9.3",
     "@types/formidable": "^3.4.0",
     "@types/lodash.times": "^4.3.7",
@@ -43,7 +44,8 @@
     "tailwindcss": "3.3.2",
     "tw-elements": "1.0.0-beta2",
     "typescript": "5.1.6",
-    "uploadthing": "^4.1.1"
+    "uploadthing": "^4.1.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/multer": "^1.4.7"
