--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/react": "1.0.0-beta.13",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "8.9.3",
+    "@tanstack/table-core": "^8.9.3",
     "@types/formidable": "^3.4.0",
     "@types/lodash.times": "^4.3.7",
     "@types/node": "20.4.1",
