--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.0.6",
     "@nextui-org/react": "1.0.0-beta.13",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "8.9.3",
