--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "@uploadthing/react": "^5.1.0",
     "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
@@ -36,7 +35,6 @@
     "formidable": "v3",
     "lodash": "^4.17.21",
     "lodash.times": "^4.3.2",
-    "multer": "1.4.5-lts.1",
     "next": "13.4.9",
     "next-connect": "^1.0.0",
     "postcss": "8.4.25",
@@ -47,11 +45,9 @@
     "tailwindcss": "3.3.2",
     "tw-elements": "1.0.0-beta2",
     "typescript": "5.1.6",
-    "uploadthing": "^4.1.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@hookform/devtools": "^4.3.1",
-    "@types/multer": "^1.4.7"
+    "@hookform/devtools": "^4.3.1"
   }
 }
