--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
     "eslint": "8.44.0",
