--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
     "eslint": "8.44.0",
@@ -36,8 +35,10 @@
     "formidable": "v3",
     "lodash": "^4.17.21",
     "lodash.times": "^4.3.2",
+    "mongoose": "^7.3.4",
     "next": "13.4.9",
     "next-connect": "^1.0.0",
+    "node-uuid": "^1.4.8",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -49,6 +50,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@hookform/devtools": "^4.3.1"
+    "@hookform/devtools": "^4.3.1",
+    "@types/node-uuid": "^0.0.29"
   }
 }
