--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "react",
     "starter"
   ],
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.0.6",
     "@nextui-org/react": "1.0.0-beta.13",
+    "@prisma/client": "^5.0.0",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "8.9.3",
     "@tanstack/table-core": "^8.9.3",
@@ -35,12 +39,12 @@
     "formidable": "v3",
     "lodash": "^4.17.21",
     "lodash.times": "^4.3.2",
-    "mongoose": "^7.3.4",
     "next": "13.4.9",
     "next-connect": "^1.0.0",
     "node-uuid": "^1.4.8",
     "postcss": "8.4.25",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.7.1",
@@ -51,6 +55,6 @@
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
-    "@types/node-uuid": "^0.0.29"
+    "prisma": "^5.0.0"
   }
 }
