--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "tailwindcss": "3.3.2",
     "tw-elements": "1.0.0-beta2",
     "typescript": "5.1.6",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
