--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@tanstack/react-table": "8.9.3",
     "@tanstack/table-core": "^8.9.3",
     "@types/formidable": "^3.4.0",
-    "@types/lodash.times": "^4.3.7",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -35,16 +34,15 @@
     "form-data": "^4.0.0",
     "formidable": "v3",
     "lodash": "^4.17.21",
-    "lodash.times": "^4.3.2",
     "next": "13.4.9",
     "next-connect": "^1.0.0",
-    "node-uuid": "^1.4.8",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.7.1",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "tw-elements": "1.0.0-beta2",
     "typescript": "5.1.6",
