--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tw-elements": "1.0.0-beta2",
     "typescript": "5.1.6",
     "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
