--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@
 # Prisma supports the native connection string orderan for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+#DATABASE_URL="mysql://root:@localhost:3306/test"
 DATABASE_URL="mysql://root:@localhost:3306/tahu_baxo_bupudji"
 
