--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@iconify/react": "^5.0.2",
     "@prisma/client": "^5.22.0",
+    "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-table": "8.9.3",
     "@tanstack/table-core": "^8.20.5",
@@ -30,10 +31,10 @@
     "classnames": "^2.5.1",
     "eslint": "8.44.0",
     "eslint-config-next": "15.0.3",
-    "html-to-image": "^1.11.11",
-    "lucide-react": "^0.301.0",
     "form-data": "^4.0.1",
     "formidable": "^3.5.2",
+    "html-to-image": "^1.11.11",
+    "lucide-react": "^0.301.0",
     "next": "^15.0.3",
     "next-connect": "^1.0.0",
     "postcss": "8.4.25",
@@ -42,6 +43,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.2",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.4.13",
     "typescript": "5.1.6",
