--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.22.0",
     "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/match-sorter-utils": "^8.19.4",
+    "@tanstack/react-query": "^5.62.2",
     "@tanstack/react-table": "8.9.3",
     "@tanstack/table-core": "^8.20.5",
     "@types/formidable": "^3.4.5",
@@ -49,7 +50,8 @@
     "typescript": "5.1.6",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "6.1.2",
