--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^9.1.3",
