add create checkout ui and management state trolly use zustand

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ prisma/dev.db
 /.idea/httpRequests/2024-12-07T202615.200.json
 /.idea/httpRequests/2024-12-07T202726.200.json
 /identifier.sqlite
+/.idea/httpRequests/2024-12-10T183027.500.json
+/.idea/httpRequests/2024-12-10T183036.500.json
+.idea
+.idea/workspace.xml
