save order success and add table can print and export excel

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "open": "next dev & open http://localhost:3000"
   },
   "keywords": [
     "react",
@@ -34,15 +35,17 @@
     "form-data": "^4.0.1",
     "formidable": "^3.5.2",
     "html-to-image": "^1.11.11",
-    "lucide-react": "^0.301.0",
+    "lucide-react": "^0.468.0",
     "next": "^15.0.3",
     "next-connect": "^1.0.0",
     "postcss": "8.4.25",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-export-table-to-excel": "^1.0.6",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
+    "react-to-print": "^3.0.2",
     "tailwindcss": "3.4.13",
     "typescript": "5.1.6",
     "xlsx": "^0.18.5",
