save add auth and add fetch for Earning and

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@
 DATABASE_URL="file:./dev.db"
 #DATABASE_URL="postgresql://postgres:postgres@localhost:5432/tahu_baxo_bupudji?schema=public"
 
+
+SESSION_SECRET="eW7BMQn05l/qFX5Q/3t1XRelqgtX/g/b4IH90Clg3OY="
+REFRESH_TOKEN="lwfq5rXUJqTRYUhzfP4RLGxNqWTiE3VQsSJ5SqgVdRM="
