--- a/package.json
+++ b/package.json
@@ -16,57 +16,61 @@
   ],
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
-    "@hookform/resolvers": "^2.9.11",
-    "@iconify/react": "^5.0.2",
-    "@prisma/client": "^5.22.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@iconify/react": "^5.1.0",
+    "@prisma/client": "^6.1.0",
     "@tanstack/match-sorter-utils": "^8.19.4",
-    "@tanstack/react-query": "^5.62.3",
-    "@tanstack/react-query-devtools": "^5.62.7",
-    "@tanstack/react-table": "8.9.3",
+    "@tanstack/react-query": "^5.62.8",
+    "@tanstack/react-query-devtools": "^5.62.8",
+    "@tanstack/react-table": "8.20.6",
     "@tanstack/table-core": "^8.20.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.5",
-    "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
+    "@types/node": "22.10.2",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
+    "autoprefixer": "10.4.20",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.7",
     "classnames": "^2.5.1",
-    "eslint": "8.44.0",
-    "eslint-config-next": "15.0.3",
+    "eslint": "9.17.0",
+    "eslint-config-next": "15.1.2",
     "form-data": "^4.0.1",
     "formidable": "^3.5.2",
     "html-to-image": "^1.11.11",
-    "lucide-react": "^0.468.0",
-    "next": "^15.0.3",
+    "jose": "^5.9.6",
+    "lucide-react": "^0.469.0",
+    "next": "^15.1.2",
     "next-connect": "^1.0.0",
-    "postcss": "8.4.25",
-    "react": "^18.3.1",
+    "postcss": "8.4.49",
+    "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-export-table-to-excel": "^1.0.6",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "react-to-print": "^3.0.2",
-    "tailwindcss": "3.4.13",
-    "typescript": "5.1.6",
+    "server-only": "^0.0.1",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.7.2",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0",
-    "zod": "^3.23.8",
+    "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "6.1.2",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
-    "@vitejs/plugin-react": "4.0.4",
-    "@vitest/browser": "^0.34.6",
-    "@vitest/coverage-istanbul": "^0.34.6",
-    "daisyui": "4.12.14",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.1.0",
+    "@testing-library/user-event": "14.5.2",
+    "@vitejs/plugin-react": "4.3.4",
+    "@vitest/browser": "^2.1.8",
+    "@vitest/coverage-istanbul": "^2.1.8",
+    "daisyui": "4.12.22",
     "fluid-tailwind": "^1.0.4",
-    "jsdom": "^22.1.0",
-    "prisma": "^5.22.0",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "0.34.3",
-    "webdriverio": "^8.40.6"
+    "jsdom": "^25.0.1",
+    "prisma": "^6.1.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "2.1.8",
+    "webdriverio": "^9.4.5"
   }
 }
