add otp on user and fix order( on create )

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ DATABASE_URL="file:./dev.db"
 
 SESSION_SECRET="eW7BMQn05l/qFX5Q/3t1XRelqgtX/g/b4IH90Clg3OY="
 REFRESH_TOKEN="lwfq5rXUJqTRYUhzfP4RLGxNqWTiE3VQsSJ5SqgVdRM="
+NODEMAILER_PASS="okvh mkpb vnem gfgf"
+NODEMAILER_EMAIL="liar88828@gmail.com"
