--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.5",
     "@types/node": "22.10.2",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
@@ -42,6 +43,7 @@
     "lucide-react": "^0.469.0",
     "next": "^15.1.2",
     "next-connect": "^1.0.0",
+    "nodemailer": "^6.9.16",
     "postcss": "8.4.49",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
