--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,18 @@
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string orderan for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+#DATABASE_URL="mysql://root:@localhost:3306/test"
+#DATABASE_URL="mysql://root:@localhost:3306/tahu_baxo_bupudji"
+DATABASE_URL="file:./dev.db"
+#DATABASE_URL="postgresql://postgres:postgres@localhost:5432/tahu_baxo_bupudji?schema=public"
+
+SESSION_SECRET="eW7BMQn05l/qFX5Q/3t1XRelqgtX/g/b4IH90Clg3OY="
+REFRESH_TOKEN="lwfq5rXUJqTRYUhzfP4RLGxNqWTiE3VQsSJ5SqgVdRM="
+NODEMAILER_PASS=" "
+NODEMAILER_EMAIL=" "
+NEXT_PUBLIC_URL_PAGE="http://localhost:3000"
+NEXT_PUBLIC_URL_API="http://localhost:3000/api/"
+NEXT_PUBLIC_URL_IMAGE="http://localhost:8000/api/"
