--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-export-table-to-excel": "^1.0.6",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
+    "react-qr-code": "^2.0.15",
     "react-to-print": "^3.0.2",
     "server-only": "^0.0.1",
     "tailwindcss": "3.4.17",
