--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kantor",
   "version": "0.1.0",
+
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -61,18 +62,19 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.1.0",
+    "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "14.5.2",
-    "@vitejs/plugin-react": "4.3.4",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitest/browser": "^2.1.8",
     "@vitest/coverage-istanbul": "^2.1.8",
     "daisyui": "4.12.22",
     "fluid-tailwind": "^1.0.4",
     "jsdom": "^25.0.1",
     "prisma": "^6.1.0",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "2.1.8",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^2.1.8",
     "webdriverio": "^9.4.5"
   }
 }
