--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,5 @@
 {
   "compilerOptions": {
-
-    //    "jsxImportSource": "react-icons/{{member}}",
     "target": "es2017",
     "lib": [
       "dom",
@@ -32,6 +30,7 @@
       }
     ],
     "paths": {
+      //      "@": ["src"],
       "@/*": [
         "./src/*"
       ]
@@ -47,7 +46,5 @@
   "exclude": [
     "node_modules",
     "__tests__/",
-    "cypress.config.ts",
-    "cypress"
   ]
 }
