--- a/.env.local.example
+++ b/.env.local.example
@@ -14,5 +14,5 @@ REFRESH_TOKEN="lwfq5rXUJqTRYUhzfP4RLGxNqWTiE3VQsSJ5SqgVdRM="
 NODEMAILER_PASS=" "
 NODEMAILER_EMAIL=" "
 NEXT_PUBLIC_URL_PAGE="http://localhost:3000"
-NEXT_PUBLIC_URL_API="http://localhost:3000/api/"
+NEXT_PUBLIC_URL_API="http://192.168.1.5:3000/api/"
 NEXT_PUBLIC_URL_IMAGE="http://localhost:8000/api/"
