fix status user and fix order history card

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,12 +9,12 @@
 DATABASE_URL="file:./dev.db"
 #DATABASE_URL="postgresql://postgres:postgres@localhost:5432/tahu_baxo_bupudji?schema=public"
 
-SESSION_SECRET="eW7BMQn05l/qFX5Q/3t1XRelqgtX/g/b4IH90Clg3OY="
-REFRESH_TOKEN="lwfq5rXUJqTRYUhzfP4RLGxNqWTiE3VQsSJ5SqgVdRM="
+SESSION_SECRET="xxxxx"
+REFRESH_TOKEN="xxx"
 NODEMAILER_PASS=" "
 NODEMAILER_EMAIL=" "
-NEXT_PUBLIC_URL_PAGE="http://localhost:3000"
-NEXT_PUBLIC_URL_API="http://192.168.1.5:3000"
-NEXT_PUBLIC_URL_IMAGE="http://localhost:8000/api/"
+NEXT_PUBLIC_URL_PAGE="xxx"
+NEXT_PUBLIC_URL_API="xxx"
+NEXT_PUBLIC_URL_IMAGE="xxx/api/"
 NEXT_PUBLIC_URL_PAGE_RAW="xxx"
 NEXT_PUBLIC_URL_API_RAW="xxx"
